expenses app with ls

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </select>
         <div class="stats">
             <p class="label"> Лимит:
-                <span class="limit"></span> руб.
+                <span class="limit">10000</span> руб.
                 <button class="change-btn">
                     <img src="img/changelimit.png" alt="смена лимита">
                 </button>
